Started implementing ModGradle 2 Cleanup of api mappings and util (excluding util.tasks)